--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@ header:
 ---
 
 
+<center>
+
+  <a href="/assets/documents/poster.pdf" class="btn btn-primary btn--info btn--large">Brochure</a>  <a href="/abstract" class="btn btn-primary btn--info btn--large">Abstract Submission</a> 
+  
+  </center>
+  <br>
+
+
 It is a pleasure for the Department of Anaesthesia, MAMC to welcome you for its 4th MAMC Anaesthesia Update. We are holding this event between 31st January to 3rd February 2023. This program has been popular among postgraduate students from all over our country. <br><br>
 
 Our effort will be to provide quality preparation for postgraduate students appearing for MD, DNB &DA examination. <br><br>
 
 Various topics in anaesthesia will be covered by eminent faculty through didactics, live case discussions, demonstrations of commonly asked equipments in viva voce with emphasis on practical knowledge and recent advances. This academic event will be an enriching experience. We look forward to your participation at the <strong>MAMC ANAESTHESIA UPDATE 2022</strong>.
 
-<br><a href="/assets/documents/poster.pdf ">Brochure</a>
