--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@ header:
 
 <center>
 
-  <a href="/assets/documents/poster.pdf" class="btn btn-primary btn--info btn--large">Brochure</a>  <a href="/abstract" class="btn btn-primary btn--info btn--large">Abstract Submission</a> 
+  <a href="/assets/documents/poster.pdf" class="btn btn-primary btn--info btn--large">Brochure</a> 
+   <!-- <a href="/abstract" class="btn btn-primary btn--info btn--large">Abstract Submission</a>  -->
   
   </center>
   <br>
 
+It is with great pleasure that the Department of Anaesthesia, MAMC welcomes you to the 5th MAMC Anaesthesia Update. We are honored to host this significant event from  October 15th to October 19th 2024. Over the years, this program has become a cornerstone for postgraduate students from across the country, providing a platform for learning, discussion, and innovation.<br><br>
 
-It is a pleasure for the Department of Anaesthesia, MAMC to welcome you for its 4th MAMC Anaesthesia Update. We are holding this event between 31st January to 3rd February 2023. This program has been popular among postgraduate students from all over our country. <br><br>
+Our commitment is to deliver a comprehensive and high-quality educational experience. This year's MAMC ANAESTHESIA UPDATE 2024, features a diverse range of topics, meticulously curated to aid postgraduate students preparing for their MD, DNB, and DA examinations and for practicing anaesthesiologists. Our sessions will be led by eminent faculty members who bring a wealth of knowledge and expertise.<br><br>
+ 
 
-Our effort will be to provide quality preparation for postgraduate students appearing for MD, DNB &DA examination. <br><br>
+Throughout this event, we will engage in live case discussions,didactic sessions by eminent national  faculty, exams oriented and interactive workshops,OSCE, music therapy as stress relief,recent advances in anaesthesia practices. 
+We believe that this refresher course will be an enriching and stimulating experience for all participants. The exchange of ideas and knowledge here will undoubtedly contribute to our collective growth and excellence in the field of anaesthesia. <br><br>
 
-Various topics in anaesthesia will be covered by eminent faculty through didactics, live case discussions, demonstrations of commonly asked equipments in viva voce with emphasis on practical knowledge and recent advances. This academic event will be an enriching experience. We look forward to your participation at the <strong>MAMC ANAESTHESIA UPDATE 2022</strong>.
-
+We are delighted to have you with us and look forward to your active participation. Let us make  the MAMC ANAESTHESIA UPDATE 2024  a memorable and academic extravaganza.
+  
+  
