--- a/index.html
+++ b/index.html
@@ -7,22 +7,43 @@ header:
 ---
 
 
-<center>
+<table>
+  <tr>
+    <th>
+      <div>
+        <p>
+          Welcome to the 5th MAMC Anaesthesia Update! The Department of Anaesthesia, MAMC, is excited to host this event
+          from
+          October 15th to October 19th, 2024. This program has become a key platform for postgraduate students across
+          the
+          country,
+          fostering learning, discussion, and innovation.
+        </p>
 
-  <a href="/assets/documents/poster.pdf" class="btn btn-primary btn--info btn--large">Brochure</a> 
-   <!-- <a href="/abstract" class="btn btn-primary btn--info btn--large">Abstract Submission</a>  -->
-  
-  </center>
-  <br>
+        <p>
+          This year's update features a diverse range of topics designed to aid postgraduate students preparing for
+          their MD,
+          DNB,
+          and DA exams, as well as practicing anaesthesiologists. Our sessions, led by distinguished faculty, will
+          include live
+          case discussions, didactic sessions, interactive workshops, OSCE, music therapy, and recent advances in
+          anaesthesia.
+        </p>
 
-It is with great pleasure that the Department of Anaesthesia, MAMC welcomes you to the 5th MAMC Anaesthesia Update. We are honored to host this significant event from  October 15th to October 19th 2024. Over the years, this program has become a cornerstone for postgraduate students from across the country, providing a platform for learning, discussion, and innovation.<br><br>
+        <p>
+          We believe this course will be an enriching experience for all participants, promoting growth and excellence
+          in
+          anaesthesia. We look forward to your active participation in making MAMC Anaesthesia Update 2024 a memorable
+          and
+          educational event.
+        </p>
+      </div>
+    </th>
+    <th>
+      <a href="/assets/documents/poster.pdf">
+        <img src="/assets/documents/poster.png" alt="Flyer" style="width:100%">
+      </a>
+    </th>
+  </tr>
 
-Our commitment is to deliver a comprehensive and high-quality educational experience. This year's MAMC ANAESTHESIA UPDATE 2024, features a diverse range of topics, meticulously curated to aid postgraduate students preparing for their MD, DNB, and DA examinations and for practicing anaesthesiologists. Our sessions will be led by eminent faculty members who bring a wealth of knowledge and expertise.<br><br>
- 
-
-Throughout this event, we will engage in live case discussions,didactic sessions by eminent national  faculty, exams oriented and interactive workshops,OSCE, music therapy as stress relief,recent advances in anaesthesia practices. 
-We believe that this refresher course will be an enriching and stimulating experience for all participants. The exchange of ideas and knowledge here will undoubtedly contribute to our collective growth and excellence in the field of anaesthesia. <br><br>
-
-We are delighted to have you with us and look forward to your active participation. Let us make  the MAMC ANAESTHESIA UPDATE 2024  a memorable and academic extravaganza.
-  
-  
+</table>
