add new annoucements and abstract submissions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ header:
     </th>
     <th>
       <a href="/assets/documents/poster.pdf">
-        <img src="/assets/documents/poster.png" alt="Flyer" style="width:100%">
+        <img src="/assets/documents/poster.jpeg" alt="Flyer" style="width:100%">
       </a>
     </th>
   </tr>
